--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- <header class="container">
+    <header class="container">
         <nav class="header-navigation">
             <label>
                 <input type="checkbox">
@@ -24,7 +24,7 @@
                 </ul>
             </label>
         </nav>
-    </header> -->
+    </header>
     <main>
         <nav class="nav">
             <ul class="nav-list">
